bug fix and ie alignment [MJ-342]

--- a/static/my.jobs.ie.css
+++ b/static/my.jobs.ie.css
@@ -3,7 +3,6 @@
     filter: none !important;   
     box-shadow: inset 0 -8px 10px rgba(0,0,0,0.18), 0 0px 0 rgba(255,255,255, 0.3), inset 0 0px 0 rgba(255,255,255, 0.3);  
     }
-
 #title {
     margin-top: -25px;
 	}
@@ -14,7 +13,9 @@
 	color:#900;
 	margin-left:38%;
 }
-
+.formBox .msieError{
+	margin-left:44%;
+}
 @media screen and (max-width: 500px){  
 	.msieError{
 		margin-left: 0;
